--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +15,9 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 1200px;
 }
 
 h1 {
