--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1a1a1a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,9 +15,7 @@
 }
 
 body {
-  margin: 0 auto;
-  padding: 1rem;
-  max-width: 1200px;
+  margin: 0;
 }
 
 h1 {
