--- a/src/layouts/navbar/styles/Navbar.css
+++ b/src/layouts/navbar/styles/Navbar.css
@@ -1,13 +1,22 @@
-.navbar{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 1rem;
-    list-style: none;
+.navbar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+  list-style: none;
 }
 
-.navbar li{
-    font-size: 1.2rem;
-    font-weight: 500;
-    cursor: pointer;
+.navbar li {
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.navbar a > svg {
+  font-size: 1.5rem;
+}
+.navbar a > svg:hover {
+  filter: drop-shadow(0px 0px 20px #fff);
+  transform: scale(1.2);
+  transition: transform 0.2s;
 }
