--- a/src/layouts/navbar/styles/Navbar.css
+++ b/src/layouts/navbar/styles/Navbar.css
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   align-items: center;
   gap: 1rem;
+  margin: 0.5rem 0;
   list-style: none;
 }
 
@@ -18,5 +19,5 @@
 .navbar a > svg:hover {
   filter: drop-shadow(0px 0px 20px #fff);
   transform: scale(1.2);
-  transition: transform 0.2s;
+  transition: transform 0.4s;
 }
