--- a/src/layouts/social/styles/Social.css
+++ b/src/layouts/social/styles/Social.css
@@ -1,4 +1,4 @@
-.navbar {
+.social {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -7,16 +7,16 @@
   list-style: none;
 }
 
-.navbar li {
+.social li {
   font-size: 1.2rem;
   font-weight: 500;
   cursor: pointer;
 }
 
-.navbar a > svg {
+.social a > svg {
   font-size: 1.5rem;
 }
-.navbar a > svg:hover {
+.social a > svg:hover {
   filter: drop-shadow(0px 0px 20px #fff);
   transform: scale(1.2);
   transition: transform 0.4s;
