--- a/src/layouts/navbar/styles/Navbar.css
+++ b/src/layouts/navbar/styles/Navbar.css
@@ -1,13 +1,12 @@
 .navbar {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: column;
   gap: 1rem;
+  padding: 0;
   list-style: none;
 }
 
 .navbar li {
   font-size: 1.2rem;
   font-weight: 500;
-  cursor: pointer;
 }
