--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,14 @@
 }
 .main-content {
   display: flex;
-  gap: 2rem;
+  gap: 3rem;
 }
 .main-content-left {
+  position: sticky;
+  top: 1rem;
+  height: fit-content;
   flex-basis: 40%;
+}
+.main-content-right {
+  margin-top: 2rem;
 }
