--- a/src/layouts/navbar/styles/Navbar.css
+++ b/src/layouts/navbar/styles/Navbar.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0;
+  padding-left: 1rem;
+  margin-top: 2rem;
   list-style: none;
 }
 
