--- a/src/layouts/navbar/styles/Link.css
+++ b/src/layouts/navbar/styles/Link.css
@@ -5,5 +5,5 @@
   transition: filter 300ms;
 }
 .link:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
+  filter: drop-shadow(0px 0px 20px #fff);
 }
