--- a/src/layouts/navbar/styles/Navbar.css
+++ b/src/layouts/navbar/styles/Navbar.css
@@ -1,13 +1,13 @@
-.navbar{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 1rem;
-    list-style: none;
+.navbar {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 1rem;
+  margin-top: 2rem;
+  list-style: none;
 }
 
-.navbar li{
-    font-size: 1.2rem;
-    font-weight: 500;
-    cursor: pointer;
+.navbar li {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
