--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,10 @@
   position: sticky;
   top: 1rem;
   height: fit-content;
-  flex-basis: 40%;
+  flex: 1;
 }
 .main-content-right {
+  flex: 1;
+  width: 60%;
   margin-top: 2rem;
 }
