--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,23 @@
   max-width: 1200px;
   margin: 0 auto;
 }
-.main-content {
-  display: flex;
-  gap: 3rem;
-}
-.main-content-left {
-  position: sticky;
-  top: 1rem;
-  height: fit-content;
-  flex-basis: 40%;
-}
 .main-content-right {
   margin-top: 2rem;
+}
+
+@media screen and (min-width: 900px) {
+  .main-content {
+    display: flex;
+    gap: 3rem;
+  }
+  .main-content-left {
+    position: sticky;
+    top: 1rem;
+    height: fit-content;
+    flex: 1;
+  }
+  .main-content-right {
+    flex: 1;
+    width: 60%;
+  }
 }
