--- a/src/layouts/skill/styles/SkillElement.css
+++ b/src/layouts/skill/styles/SkillElement.css
@@ -1,5 +1,7 @@
 .skill-element {
-  padding: 0.5rem 0.5rem 0.2rem;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
   margin: 0;
   width: fit-content;
   background-color: #1a1a1a;
