--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 .main-content-right {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 @media screen and (min-width: 900px) {
@@ -19,7 +19,6 @@
     flex: 1;
   }
   .main-content-right {
-    flex: 1;
-    width: 60%;
+    flex-basis: 55%;
   }
 }
