--- a/src/layouts/project/styles/Timeline.css
+++ b/src/layouts/project/styles/Timeline.css
@@ -2,20 +2,20 @@
   display: flex;
   flex-direction: column;
 }
+.timeline-section {
+  display: flex;
+}
 
 .timeline-content {
+  width: 100%;
   padding: 20px;
   background: #1f1f1f;
-  -webkit-box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+  box-shadow: 0px 0px 10px #8a8a8a8a;
   border-radius: 5px;
   color: white;
-  padding: 1.75rem;
   transition: 0.4s ease;
   overflow-wrap: break-word !important;
   margin: 1rem;
-  margin-bottom: 20px;
-  border-radius: 6px;
 }
 
 .timeline-component {
@@ -26,7 +26,6 @@
   position: relative;
   background-image: linear-gradient(45deg, #21d3f2, #09ccab, #e2e2e2);
   width: 3px;
-  height: 100%;
 }
 .main-middle {
   opacity: 0;
@@ -43,9 +42,9 @@
   transform: translateX(-50%);
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .timeline {
     display: grid;
     grid-template-columns: 1fr 3px 1fr;
   }
-}
+} */
