--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
   margin: 0 auto;
 }
 .main-content-right {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 @media screen and (min-width: 900px) {
   .main-content {
     display: flex;
-    gap: 3rem;
+    gap: 2rem;
   }
   .main-content-left {
     position: sticky;
@@ -19,7 +19,6 @@
     flex: 1;
   }
   .main-content-right {
-    flex: 1;
-    width: 60%;
+    flex-basis: 55%;
   }
 }
