Change skill and employment completed

--- a/src/layouts/footer/styles/Footer.css
+++ b/src/layouts/footer/styles/Footer.css
@@ -6,3 +6,9 @@
   margin-top: 2rem;
   border-top: 1px solid #ffffff75;
 }
+
+.footer-contact{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
