--- a/src/layouts/employment/styles/Employment.css
+++ b/src/layouts/employment/styles/Employment.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 1rem;
   border-bottom: 1px solid #ffffff75;
-  margin-bottom: 1rem;
+  margin: 2rem 0 1rem;
 }
 .employment-name {
   font-weight: 500;
