--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@font-face {
+  font-family: euclid;
+  src: url(./../public/fonts/Euclid\ Circular\ A\ Medium.ttf);
+}
 
+@font-face {
+  font-family: porsha;
+  src: url(./../public/fonts/PorshaRichela.ttf);
+}
+
+:root {
   color-scheme: light dark;
   --cl-primary: #0f90c3;
-
+  --cl-white: #f5f5f5;
+  --bg-primary: #1a1a1a;
+  --font-primary: porsha;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -28,7 +36,8 @@ body {
     rgba(44, 122, 237, 1) 60%,
     rgba(26, 26, 26, 1) 77%
   );
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--cl-white);
+  font-family: euclid;
 }
 
 h1 {
@@ -46,6 +55,10 @@ p {
 
 a {
   color: var(--cl-primary);
+}
+
+figure {
+  margin: 0;
 }
 
 img {
