--- a/src/layouts/header/components/menu/Menu.css
+++ b/src/layouts/header/components/menu/Menu.css
@@ -6,8 +6,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 250px;
+  width: 200px;
   padding: 1rem;
   background-color: var(--bg-primary);
   color: var(--cl-white);
+}
+
+.menu-social {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 2rem;
 }
