--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --cl-primary: #0f90c3;
   --cl-white: #f5f5f5;
   --bg-primary: #1a1a1a;
+  --bg-secondary: #474747;
   --font-primary: porsha;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
