--- a/src/layouts/header/Header.css
+++ b/src/layouts/header/Header.css
@@ -1,10 +1,13 @@
 .header {
+  position: sticky;
+  top: 1rem;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  background-color: #ffffff21;
+  background-color: var(--bg-secondary);
   padding: 0.5rem;
   border-radius: 50px;
+  z-index: 1000;
 }
 
 .header-contact-btn.header-contact-btn {
@@ -12,4 +15,21 @@
   background-color: var(--cl-primary);
   font-weight: 600;
   min-width: 50px;
+}
+
+.header-web {
+  display: none;
+  gap: 10%;
+  align-items: center;
+}
+
+@media screen and (min-width: 992px) {
+  .header-menu {
+    display: none;
+  }
+
+  .header-web {
+    display: flex;
+    flex: 1;
+  }
 }
