--- a/src/layouts/header/components/navbar/Navbar.css
+++ b/src/layouts/header/components/navbar/Navbar.css
@@ -16,3 +16,9 @@
   /* transform: scale(1.2);
   transition: transform 0.4s; */
 }
+
+@media screen and (min-width: 992px) {
+  .navbar {
+    flex-direction: row;
+  }
+}
