--- a/src/layouts/header/styles/Logo.css
+++ b/src/layouts/header/styles/Logo.css
@@ -9,7 +9,7 @@
   aspect-ratio: 100/68;
 }
 
-span {
+.logo > span {
   font-size: 1.2rem;
   font-weight: 500;
   white-space: nowrap;
@@ -21,7 +21,7 @@ span {
     max-width: 69px;
   }
 
-  .logo-img img {
+  .logo-img > img {
     border-radius: 50px;
   }
 }
