--- a/src/layouts/presentation/styles/Presentation.css
+++ b/src/layouts/presentation/styles/Presentation.css
@@ -1,14 +1,8 @@
 .presentation {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   gap: 1rem;
   margin: 2rem 0;
-}
-
-@media screen and (min-width: 992px) {
-  .presentation {
-    flex-direction: row;
-    align-items: center;
-    gap: 3rem;
-  }
 }
