--- a/src/layouts/presentation/styles/DownloadCv.css
+++ b/src/layouts/presentation/styles/DownloadCv.css
@@ -1,8 +1,10 @@
 .downloadCv {
   position: relative;
   margin: 0 1rem;
-  border: 0.8rem solid #0f90c385;
+  border: 12px solid #0f90c3a1;
   border-radius: 50%;
+  height: fit-content;
+  width: fit-content;
 }
 
 .downloadCv::after {
@@ -13,7 +15,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 1.5rem solid #0f90c330;
+  border: 24px solid #0f90c35e;
   z-index: -1;
 }
 
