--- a/src/layouts/header/styles/Logo.css
+++ b/src/layouts/header/styles/Logo.css
@@ -14,6 +14,7 @@
   font-weight: 500;
   white-space: nowrap;
   font-family: var(--font-primary);
+  color: #ffffffa9;
 }
 
 @media screen and (min-width: 992px) {
