--- a/src/layouts/presentation/styles/Presentation.css
+++ b/src/layouts/presentation/styles/Presentation.css
@@ -7,26 +7,26 @@
 }
 
 .presentation-figure {
-  position: relative;
-  background-image: url(./../../../../public/images/presentation.jpg);
-  background-repeat: no-repeat;
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
-  background-size: cover;
   margin: 0 auto;
 }
 
-.presentation-cv {
-  position: absolute;
-  left: -4rem;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 992px) {
   .presentation-figure {
-    width: calc(50vw + 2rem);
-    height: calc(50vw + 2rem);
+    position: relative;
+    background-image: url(./../../../../public/images/presentation.jpg);
+    background-repeat: no-repeat;
+    width: calc(35vw + 2rem);
+    height: calc(35vw + 2rem);
+    max-width: 500px;
+    max-height: 500px;
+    border-radius: 50%;
+    background-size: cover;
+  }
+
+  .presentation-cv {
+    position: absolute;
+    left: -4rem;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
