--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,12 @@ body {
   margin: 0;
   background: rgb(44, 122, 237);
   background: linear-gradient(
-    305deg,
+    300deg,
     rgba(44, 122, 237, 1) 0%,
-    rgba(26, 26, 26, 1) 25%,
+    rgba(26, 26, 26, 1) 19%,
     rgba(26, 26, 26, 1) 40%,
-    rgba(44, 122, 237, 1) 60%,
-    rgba(26, 26, 26, 1) 77%
+    rgba(44, 122, 237, 1) 51%,
+    rgba(26, 26, 26, 1) 61%
   );
   color: var(--cl-white);
   font-family: euclid;
@@ -51,4 +51,10 @@ figure {
 
 img {
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  * {
+    font-size: 14px;
+  }
 }
