--- a/src/layouts/projects/styles/CardTimeline.css
+++ b/src/layouts/projects/styles/CardTimeline.css
@@ -7,7 +7,7 @@
   box-shadow: 0px 0px 10px #8a8a8a8a;
   border-radius: 5px;
   transition: 0.4s ease;
-  margin: 1rem;
+  margin: 0 1rem 3rem;
 }
 
 .cardTimeline-title {
@@ -15,7 +15,7 @@
   font-weight: 500;
 }
 
-.cardTimeline-redirect{
+.cardTimeline-redirect {
   display: flex;
   justify-content: flex-end;
   gap: 0.5rem;
