--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --cl-white: #f5f5f5;
   --bg-primary: #1a1a1a;
   --bg-secondary: #474747;
+  --cl-gray: #bbb;
   --font-primary: porsha;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -54,6 +55,13 @@ img {
   width: 100%;
 }
 
+/* Project modal */
+.MuiBox-root.MuiBox-root {
+  background-color: var(--bg-primary);
+  border-radius: 1rem;
+  border: 0;
+}
+
 @media screen and (max-width: 768px) {
   * {
     font-size: 14px;
@@ -61,6 +69,10 @@ img {
 
   /* Project modal */
   .MuiBox-root.MuiBox-root {
-    width: 75%;
+    width: 85%;
+  }
+
+  .MuiBox-root.MuiBox-root:focus-visible {
+    outline: auto;
   }
 }
