--- a/src/layouts/header/styles/Menu.css
+++ b/src/layouts/header/styles/Menu.css
@@ -2,7 +2,7 @@
   color: #fff;
 }
 
-.menu .css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
+.menu .MuiPaper-root {
   display: flex;
   flex-direction: column;
   gap: 1rem;
